# ai-incident-post-mortem-generator

./: Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml
frontend/: app.py
src/: main.py
src/controllers/: IncidentController.py
src/helpers/: config.py
src/models/: incident_models.py
src/routes/: incident.py
src/stores/llm/: LLMProviderFactory.py
